<resources>
    <string name="app_name">Theater</string>

    <string name="about_movie">About the movie</string>
    <string name="bannerUrl">Add banner image Url</string>
    <string name="coverUrl">Add cover image Url</string>
    <string name="lang">Add movie languages</string>
    <string name="duration">Duration</string>
    <string name="mname">Add movie name</string>
    <string name="rating">Add no. of rating out of 10</string>
    <string name="rdate">Add movie release date</string>
    <string name="add">Add New Movie</string>
    <string name="update">Update Movie Details</string>
    <string name="theater">Theater Admin App</string>
    <string name="theater_user">Add Movie In Theater User App</string>
</resources>