<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
android:layout_width="match_parent"
android:layout_height="match_parent"
    android:background="@color/background">

<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_alignParentStart="true"
    android:layout_alignParentTop="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/titleBold"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/theater"
                    android:fontFamily="@font/manrope_extrabold"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="25sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/theater_user"
                    android:fontFamily="@font/manrope_regular"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="12sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clipToPadding="false"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <androidx.cardview.widget.CardView
                        android:layout_width="160dp"
                        android:layout_height="180dp"
                        android:layout_margin="10dp"
                        android:clickable="true"
                        android:foreground="?android:attr/selectableItemBackground"
                        android:onClick="on_add">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="center"
                            android:orientation="vertical">

                            <ImageView
                                android:layout_width="50dp"
                                android:layout_height="50dp"
                                android:background="@drawable/ic_add" />

                            <View
                                android:layout_width="match_parent"
                                android:layout_height="1dp"
                                android:layout_margin="10dp"
                                android:background="@color/lightgray" />

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:gravity="center"
                                android:padding="5dp"
                                android:text="@string/add"
                                android:fontFamily="@font/manrope_bold"
                                android:textColor="@color/black" />
                        </LinearLayout>
                    </androidx.cardview.widget.CardView>

<!--                    <androidx.cardview.widget.CardView-->
<!--                        android:layout_width="160dp"-->
<!--                        android:layout_height="180dp"-->
<!--                        android:layout_margin="10dp"-->
<!--                        android:clickable="true"-->
<!--                        android:foreground="?android:attr/selectableItemBackground"-->
<!--                        android:onClick="on_update">-->

<!--                        <LinearLayout-->
<!--                            android:layout_width="match_parent"-->
<!--                            android:layout_height="match_parent"-->
<!--                            android:gravity="center"-->
<!--                            android:orientation="vertical">-->

<!--                            <ImageView-->
<!--                                android:layout_width="50dp"-->
<!--                                android:layout_height="50dp"-->
<!--                                android:background="@drawable/ic_update" />-->

<!--                            <View-->
<!--                                android:layout_width="match_parent"-->
<!--                                android:layout_height="1dp"-->
<!--                                android:layout_margin="10dp"-->
<!--                                android:background="@color/lightgray" />-->

<!--                            <TextView-->
<!--                                android:layout_width="match_parent"-->
<!--                                android:layout_height="wrap_content"-->
<!--                                android:gravity="center"-->
<!--                                android:padding="5dp"-->
<!--                                android:text="@string/update"-->
<!--                                android:fontFamily="@font/manrope_bold"-->
<!--                                android:textColor="@color/black" />-->
<!--                        </LinearLayout>-->
<!--                    </androidx.cardview.widget.CardView>-->
                </LinearLayout>


            </LinearLayout>
        </RelativeLayout>
    </LinearLayout>
</ScrollView>
</RelativeLayout>
